Fixed alignment issue with IconWithTooltip inside Checkbox label #411

--- a/src/proto/checkable.css
+++ b/src/proto/checkable.css
@@ -47,7 +47,8 @@
         display:            inline-block;
         vertical-align:     middle;
 
-        position:           relative;
+        position:           absolute;
+        top:                3px;
 
         box-sizing:         border-box;
         width:              2.2rem;
@@ -68,9 +69,9 @@
 
     & > :first-child
     {
-        display:        inline-block;
+        /* display:        inline-block; */
         vertical-align: middle;
-        margin-left:    1rem;
+        margin-left:    3rem;
     }
 }
 
